# HomeBuyingApp

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/.workflows/: python-ci.yml
.github/workflows/: python-ci.yml
home_buying_app/: config.py  content.py  decision.py  gui.py  main.py  output.py  processing.py
home_buying_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
home_buying_app/extras/: country_data.py
home_buying_app/folders/Country Data/: countries_finance_data.txt
home_buying_app/folders/User Input/: client_details.txt  expenses.txt  financial_details.txt  property_details.txt
src/home_buying_app/: gui.py  main.py  output.py
src/home_buying_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/home_buying_app/extras/: country_data.py
tests/: test_decision.py  test_gui.py  test_output.py  test_processing.py
