[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=home_buying_app"
testpaths = [
    "tests",
]

[tool.poetry]
name = "HomeBuyingApp"
version = "0.1.0"
packages = [
    { include = "home_buying_app", from = "src" }
]

[tool.poetry.include]
"src/home_buying_app/extras/country_data.py" = "home_buying_app/extras/country_data.py"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true